--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center>
-	<h1>Welcome to The Containers Endgame Workshop</h1>
+	<h1>Welcome to The Containers Endgame Workshop ....</h1>
 	<h1>v2.0</h1>
 	<br><hr>
 	<p>Demo of Jenkins CI/CD Pipeline using Kubernetes Continuous Deployment plugins by Tirthankar</p>
